fixed spacing

--- a/mediaSmallMobile.css
+++ b/mediaSmallMobile.css
@@ -422,12 +422,12 @@
   }
 
   #donorLabel1 {
-    margin-left: 40px;
+    margin-left: 44px;
     margin-right: 40px;
   }
   #donorLabel2 {
-    margin-left: 15px;
-    margin-right: 20px;
+    margin-left: 10px;
+    margin-right: 28px;
   }
 
   #teamBtn {
